syntax = "proto3";
package oracle.v1;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "oracle/v1/prices.proto";

option go_package = "github.com/MinterTeam/mhub2/module/x/oracle/types";

service Msg {
    rpc PriceClaim(MsgPriceClaim) returns(MsgPriceClaimResponse) {
        option (google.api.http).post = "/oracle/v1/price_claim";
    }
    rpc HoldersClaim(MsgHoldersClaim) returns(MsgHoldersClaimResponse) {
        option (google.api.http).post = "/oracle/v1/holders_claim";
    }
}

message MsgPriceClaim {
  uint64 epoch        = 1;
  Prices prices       = 2;
  string orchestrator = 3;
}

message MsgPriceClaimResponse {}

message MsgHoldersClaim {
    uint64 epoch        = 1;
    Holders holders     = 2;
    string orchestrator = 3;
}

message MsgHoldersClaimResponse {}
